--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
+  height: 100vh;
 }
 
 body {
@@ -32,8 +33,10 @@ body {
 .image-container {
   padding: 20px;
   display: flex;
+  flex-grow: 1;
   gap: 30px;
   flex-flow: row wrap;
+  overflow: scroll;
 }
 
 .image-container__item {
