--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,6 +22,10 @@ body {
   position: sticky;
 }
 
+.search-container__suggestions {
+  border: 1px solid red;
+}
+
 .search-container__input {
   height: 35px;
   padding-left: 10px;
@@ -63,3 +67,6 @@ body {
   cursor: pointer;
 }
 
+input[type='submit'] {
+  display: none;
+}
