--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,6 +25,7 @@ body {
 .search-container__suggestions {
   border: 1px solid red;
   height: 200px;
+  display: none;
 }
 
 .search-container__input {
