--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,21 +44,18 @@ body {
 }
 
 .image-container__item {
-  border: 1px solid red;
+  width: 100%;
+  height: 100%;
 }
 
 .image-container__item--flipped {
-  border: 2px solid yellow;
- 
 }
-
 
 .pagination {
   display: flex;
   justify-content: flex-end;
   gap: 20px;
   padding: 20px;
-  border: 1px solid red;
 }
 
 .pagination__button {
@@ -77,16 +74,15 @@ input[type='submit'] {
   display: none;
 }
 
-.flip-card {
+.flip-outer {
   background-color: transparent;
   width: 300px;
   height: 200px;
-  border: 1px solid #f1f1f1;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
 /* This container is needed to position the front and back side */
-.flip-card-inner {
+.flip-inner {
   position: relative;
   width: 100%;
   height: 100%;
@@ -96,12 +92,13 @@ input[type='submit'] {
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
+.flip-outer:hover .flip-inner {
   transform: rotateY(180deg);
 }
 
 /* Position the front and back side */
-.flip-card-front, .flip-card-back {
+.flip-front,
+.flip-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -109,9 +106,8 @@ input[type='submit'] {
   backface-visibility: hidden;
 }
 
-
 /* Style the back side */
-.flip-card-back {
+.flip-back {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
